--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
+
+    <!-- load manifest.json -->
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <h1>Simple PWA Website</h1>
